rgbds-0.6.1/test/asm/syntax-error.err
error: syntax-error.asm(2):
    syntax error, unexpected a
error: Assembly aborted (1 error)!
